--- a/ebusiness-user/src/main/resources/application.properties
+++ b/ebusiness-user/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8070
 
 #jdbc
 spring.datasource.url=jdbc:mysql://localhost:3306/ebusiness?characterEncoding=UTF-8
@@ -19,4 +19,4 @@ spring.dubbo.application.name=ebusiness-user
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.base-package=com.atguigu.ebusiness
 
-logging.level.root=debug
+#logging.level.root=debug
