--- a/ebusiness-user-web/pom.xml
+++ b/ebusiness-user-web/pom.xml
@@ -12,9 +12,9 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.15.RELEASE</version>
+		<groupId>com.atguigu.ebusiness</groupId>
+		<artifactId>ebusiness-parent</artifactId>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -32,9 +32,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.atguigu.ebusiness</groupId>
-			<artifactId>ebusiness-service-utils</artifactId>
+			<artifactId>ebusiness-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.atguigu.ebusiness</groupId>
 			<artifactId>ebusiness-web-utils</artifactId>
