--- a/ebusiness-user/pom.xml
+++ b/ebusiness-user/pom.xml
@@ -12,9 +12,9 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.14.RELEASE</version>
+		<groupId>com.atguigu.ebusiness</groupId>
+		<artifactId>ebusiness-parent</artifactId>
+		<version>1.0-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
