step-complete-3LvSelect

--- a/ebusiness-manager-web/src/main/resources/application.properties
+++ b/ebusiness-manager-web/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8081
 
-spring.dubbo.registry.address=192.168.222.20:2181 
+#dubbo×¢²áÖÐÐÄ
+spring.dubbo.registry.address=192.168.186.123:2181
 spring.dubbo.registry.protocol=zookeeper
 
-spring.dubbo.application.name=gmall-manage-web
+#
+spring.dubbo.application.name=ebusiness-manager-web
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.consumer.check=false
 spring.dubbo.consumer.timeout=600000
