--- a/dbusiness-manager-service/src/main/resources/application.properties
+++ b/dbusiness-manager-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8070
+server.port=8071
 
 #jdbc
 spring.datasource.url=jdbc:mysql://localhost:3306/ebusiness?characterEncoding=UTF-8
@@ -15,8 +15,6 @@ spring.dubbo.registry.address=192.168.186.123:2181
 spring.dubbo.registry.protocol=zookeeper
 
 #
-spring.dubbo.application.name=ebusiness-manager
+spring.dubbo.application.name=ebusiness-manager-service
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.base-package=com.atguigu.ebusiness
-
-#logging.level.root=debug
